_lib/observability/kromgo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kromgo
  namespace: monitoring
  labels:
    app.kubernetes.io/name: kromgo
    app.kubernetes.io/instance: kromgo-${ENVIRONMENT}
spec:
  type: ClusterIP
  selector:
    app: kromgo
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: health
      port: 8888
      targetPort: health
      protocol: TCP
